2014-04-28 Konstas Marmatakis marmako@gmail.com

	* tkbackup.py: Added the ability to create prject file.
	* tkbackup.py: Improvements.